--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,18 @@ spring:
         hibernate:
             ddl-auto: update
         show-sql: true
+    data:
+        redis:
+            host: ${REDIS_HOST}
+            port: ${REDIS_PORT}
+            timeout: 60000
 
 logging:
     level:
         root: INFO
         "com.wowdespacito": DEBUG
+
+mybatis:
+    mapper-locations: classpath:mappers/*.xml
+    configuration:
+        map-underscore-to-camel-case: true #下划线命名与驼峰命名的自动转换
