--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.wodespacito</groupId>
-	<artifactId>myBlog</artifactId>
+	<artifactId>my_blog</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>myBlog</name>
 	<description>Demo project for Spring Boot</description>
