rabbitmq联调成功，但是队列的写法还有待优化。添加blog的接口已通

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
     application:
         name: my_blog
+    rabbitmq:
+        host: ${RABBITMQ_HOST}
+        port: ${RABBITMQ_PORT}
+        username: ${RABBITMQ_USER}
+        password: ${RABBITMQ_PASSWORD}
     datasource:
         url: jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
         username: ${DB_USER}
@@ -17,6 +22,7 @@ spring:
         redis:
             host: ${REDIS_HOST}
             port: ${REDIS_PORT}
+            password: ${REDIS_PASS}
             timeout: 60000
 
 logging:
