路径名写错了，已更正。顺带添加了日志的功能，调试了其他的接口

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,11 +24,17 @@ spring:
             port: ${REDIS_PORT}
             password: ${REDIS_PASS}
             timeout: 60000
-
 logging:
+    file:
+        name: ${LOG_NAME}
     level:
-        root: INFO
-        "com.wowdespacito": DEBUG
+        root: ${ROOT_LOG_LEVEL}
+        com:
+            wowdespacito:
+                my_blog: ${MY_BLOG_LOG_LEVEL}
+    pattern:
+        console: "%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %level - %msg%n"
+        file: "%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %level - %msg%n"
 
 mybatis:
     mapper-locations: classpath:mappers/*.xml
