http配置完成，下一步配置https

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.wodespacito</groupId>
-	<artifactId>my_blog</artifactId>
+	<artifactId>my-blog</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>myBlog</name>
 	<description>Demo project for Spring Boot</description>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>23</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
