--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-    port: 8082
+    port: ${PORT}
 
 spring:
     application:
@@ -25,8 +25,6 @@ spring:
             password: ${REDIS_PASS}
             timeout: 60000
 logging:
-    file:
-        name: ${LOG_NAME}
     level:
         root: ${ROOT_LOG_LEVEL}
         com:
